# graduation-project

./: .gitignore  README.md
application/backend/: dev.js  package.json  tsconfig.json
application/backend/src/: config.ts  main.ts  server.ts
application/cmd/: tsconfig.json
application/frontend/: package.json
application/frontend/public/: index.html
application/frontend/src/: index.tsx  router.tsx
application/native/: .project  CMakeLists.txt  binding.gyp  build.gradle  dev.js  package.json  run.bat  settings.gradle
application/native/include/: vector.h
application/native/src/: main.ts  vector.cpp
cmd/: package.json
cmd/src/algorithm/: arnold.ts  qdfrnt.ts
cmd/src/tool/: image.ts  math.ts  matrix.ts
cmd/test/img/: peppers.tiff
cmd/test/model/: vector.test.ts
cmd/test/tool/: image.test.ts  matrix.test.ts
cpp/: CMakeLists.txt  main.cpp
cpp/cpp/: CMakeLists.txt  cpp.cpp  cpp.h
cpp/enc_temp_folder/7b17b4d5aa7180a3fb49cdec7c5fb5/: main.cpp
cpp/include/: define.h  dfrft_clan.h  dfrnt_clan.h  mark.h  qdfrnt.h  test.h  tool.h
cpp/src/: cpp.cpp  dfrft_clan.cpp  dfrntKernel.cpp  dfrnt_clan.cpp  main.cpp  mark.cpp  qdfrnt.cpp  test.cpp  tool.cpp
cpp/src/transform/: dfrntKernel.cpp
matlab/: dfrnt.m  dfrnt2.m  dfrntKernal.m  java.prj  lqdfrnt.m  main.m
matlab/function/: dfrnt.m  dfrnt2.m  dfrntKernel.m  lqdfrnt.m  lqdfrnt2.m  rqdfrnt.m
matlab/function/deal/: matrixToVector.m  mergeBlock.m  rgb2lab.m  rgb2labFt.m  rgb2labGamma.m  splitBlock.m  vectorToMatrix.m
matlab/function/mask/: adaptiveFactor.m  colorMask.m  edgeMark.m  grainMask.m  textureMask.m
matlab/function/tool/: arnold.m  ber.m  cut.m  iarnold.m
matlab/function/transform/: arnold.m  dfrft.m  dfrft2.m  dfrftKernel.m  dfrftSample.m  dfrftSample2.m  dfrnt2.m  fracF.m  iarnold.m  lqdfrnt2.m  rqdfrnt.m  rqdfrnt2.m
matlab/function/watermark/: fitness.m  qdfrftMark.m  qdfrftQcMark.m  qdfrftQcRestore.m  qdfrftQcTrain.m  qdfrftRestore.m  qdfrftTrain.m  qdfrntMark.m  qdfrntRestore.m  qdfrntTrain.m  richard.m
matlab/img/: airplane.tiff  baboon.tiff  couple.tiff  girl.tiff
matlab/test/: dfrnt2Test.m  dfrntTest.m  lqdfrntTest.m  rqdfrnt2Test.m  rqdfrntTest.m
matlab/test/deal/: matrixToVectorTest.m  mergeBlockTest.m  splitBlockTest.m
matlab/test/mask/: adaptiveFactorTest.m  textureMaskTest.m
matlab/test/performance/: fullQdfrntMarkDraw.m  qdfrntMarkNoiseTest.m  qdfrntMarkSpNoiseTest.m
matlab/test/tool/: arnoldTest.m
matlab/test/transform/: arnoldTest.m  dfrft2Test.m  dfrftSample2Test.m  dfrftSampleTest.m  dfrftTest.m  dfrnt2Test.m  dfrntTest.m  lqdfrft2Test.m  lqdfrftTest.m  lqdfrnt2Test.m  lqdfrntTest.m  rqdfrnt2Test.m  rqdfrntTest.m
matlab/test/watermark/: fullQdfrntMarkTest.m  qdfrftMarkTest.m  (+8 more)
translation/: 1.tex  A discrete fractional random transform.md  A quaternion gradient operator for color image edge detection.md  Discrete fractional fourier transform based on orthogonal projections.md  Fractional quaternion Fourier transform, convolution and correlation.md
web/backend/: WATERMARK  package.json  tsconfig.json
web/frontend/: package.json
(+100 files in other folders)
