cmake_minimum_required (VERSION 3.8)

project (WATERMARK)

include_directories (include)
include_directories (lib/include)
aux_source_directory (src SRC_DIR)
aux_source_directory (lib/src LIB_SRC_DIR)
add_library (SRC_LIB ${SRC_DIR})
add_library (LIB_SRC_LIB ${LIB_SRC_DIR})

if (WIN32)
    include_directories ($ENV{ARMADILLO_INCLUDE_DIR})
    include_directories ($ENV{OPENCV_INCLUDE_DIR})
    include_directories ($ENV{CMDLINE_INCLUDE_DIR})
    link_directories ($ENV{ARMADILLO_LIB_DIR})
	link_directories ($ENV{OPENCV_LIB_DIR})
    add_executable (${PROJECT_NAME} src/main.cpp)
    target_link_libraries (${PROJECT_NAME} SRC_LIB)
	target_link_libraries (${PROJECT_NAME} LIB_SRC_LIB)
    target_link_libraries (${PROJECT_NAME} blas_win64_MT.lib lapack_win64_MT.lib)
	target_link_libraries (${PROJECT_NAME} opencv_world410.lib)
elseif (UNIX)
    find_package (opencv required)
    find_package (armadillo required)
    add_executable (${PROJECT_NAME} src/main.cpp)
    target_link_libraries (${PROJECT_NAME} SRC_LIB)
    target_link_libraries (${PROJECT_NAME} ${OPENCV_LIBS})
    target_link_libraries (${PROJECT_NAME} ${ARMADILLO_LIBS})
endif ()
