cmake_minimum_required (VERSION 3.8)
project (WATERMARK)

set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

include_directories (include)
include_directories (lib/include)
aux_source_directory (src SRC_DIR)
aux_source_directory (lib/src LIB_SRC_DIR)
add_library (SRC_LIB ${SRC_DIR})
add_library (LIB_SRC_LIB ${LIB_SRC_DIR})

if (WIN32)
    include_directories ($ENV{ARMADILLO_INCLUDE_DIR})
    include_directories ($ENV{OPENCV_INCLUDE_DIR})
    include_directories ($ENV{CMDLINE_INCLUDE_DIR})
    link_directories ($ENV{ARMADILLO_LIB_DIR})
	link_directories ($ENV{OPENCV_LIB_DIR})
    add_executable (${PROJECT_NAME} src/main.cpp)
    target_link_libraries (${PROJECT_NAME} SRC_LIB)
	target_link_libraries (${PROJECT_NAME} LIB_SRC_LIB)
    target_link_libraries (${PROJECT_NAME} blas_win64_MT.lib lapack_win64_MT.lib)
	target_link_libraries (${PROJECT_NAME} opencv_world410.lib)
elseif (UNIX)
    include_directories (/usr/local/include/opencv4)
    find_package (OpenCV 4 REQUIRED)
    find_package (Armadillo REQUIRED)
    add_executable (${PROJECT_NAME} src/main.cpp)
    target_link_libraries (${PROJECT_NAME} SRC_LIB)
    target_link_libraries (${PROJECT_NAME} ${OPENCV_LIBS})
    target_link_libraries (${PROJECT_NAME} opencv_imgcodecs)
    target_link_libraries (${PROJECT_NAME} ${ARMADILLO_LIBS})
endif ()
